--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #edf0f1;
     padding-top: 80px;
 }
-.nofill{
-    fill:none;
-}
-header{
+
+
+/* HEAFER OF THE APP */
+
+header {
     width: 100%;
     height: 80px;
     padding-top: 20px;
@@ -23,11 +24,14 @@ header{
     border-bottom-left-radius: 10px;
     box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
 }
-header input{
+
+
+/* INPUT FILLED IF HEADER */
+
+header input {
     width: 100%;
     height: 50px;
     float: left;
-    
     padding: 0px 100px 0px 20px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -38,9 +42,12 @@ header input{
     font-size: large;
     border: 8px;
     outline: none;
-     
 }
-header button{
+
+
+/* BUTTON PF HEADER */
+
+header button {
     width: 50px;
     height: 50px;
     position: absolute;
@@ -51,50 +58,61 @@ header button{
     outline: none;
     background-color: white;
     cursor: pointer;
-
 }
-header button:hover{
+
+header button:hover {
     background-color: rgb(221, 213, 213);
 }
 
-header button svg{
+
+/* ICON OF HEADER BUTTON */
+
+header button svg {
     height: 16px;
     width: 16px;
-    color:#25b99a ;
+    color: #25b99a;
 }
-header button svg .fill{
-    fill:#25b99a;
+
+header button svg .fill {
+    fill: #25b99a;
 }
-.container{
+
+
+/* MAIN CONTAINER OF LIST */
+
+.container {
     width: 100%;
     padding-top: 15px;
-    
 }
-ul.todo{
+
+ul.todo {
     width: 100%;
     list-style-type: none;
 }
- ul.todo li{
+
+
+/* LIST OF TODO ITEAMS */
+
+ul.todo li {
     width: 100%;
-    height: 56px; 
+    height: 56px;
     border-radius: 5px;
     background-color: white;
     padding: 15px 30px 0px 30px;
     box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
     margin-bottom: 10px;
     font-size: larger;
-    
-
 }
 
-.buttons{
+
+/* BUTTONS OF DELETE AND EDIT */
+
+.buttons {
     width: 100px;
-    height: 50px;  
-    float:right; 
-  position: relative;
-  bottom: 14px;
-   
-      
+    height: 50px;
+    float: right;
+    position: relative;
+    bottom: 14px;
 }
 
 .buttons button {
@@ -109,8 +127,8 @@ ul.todo{
     float: left;
     cursor: pointer;
     color: #25b99a;
-}  
-.buttons button:hover{
-    color: red;
 }
 
+.buttons button:hover {
+    color: red;
+}
